@@ -10,8 +10,9 @@ module SymbolExtension # :nodoc:
     Globalite.localize(self, '_localization_missing_', args, locale) unless locale.nil?
   end
   
-  def localize_with_args(args={})
-    Globalite.localize(self, '_localization_missing_', args)
+  # Note that this method takes the replacement string after the args hash unlike other Globalite methods
+  def localize_with_args(args={}, replacement_string = '__localization_missing__')
+    Globalite.localize(self, replacement_string, args)
   end
   alias :l_with_args :localize_with_args
   
