@@ -159,6 +159,37 @@ module ActionView
       end
       
     end #module FormOptionsHelper
-    
-  end #module Helpers
+
+		module ActiveRecordHelper
+			def error_messages_for(*params)
+        options = params.last.is_a?(Hash) ? params.pop.symbolize_keys : {}
+        objects = params.collect {|object_name| instance_variable_get("@#{object_name}") }.compact
+				count   = objects.inject(0) {|sum, object| sum + object.errors.count }
+        unless count.zero?
+          html = {}
+          [:id, :class].each do |key|
+            if options.include?(key)
+              value = options[key]
+              html[key] = value unless value.blank?
+            else
+              html[key] = 'errorExplanation'
+            end
+          end
+          original_header_message = "#{pluralize(count, 'error')} prohibited this #{(options[:object_name] || params.first).to_s.gsub('_', ' ')} from being saved"
+					header_message = :active_record_helper_header_message.l_with_args({:error_count => count, :failed_object => (options[:object_name] || params.first).to_s.gsub('_', ' ') }, original_header_message)
+					error_messages = objects.map {|object| object.errors.full_messages.map {|msg| content_tag(:li, msg) } }
+          content_tag(:div,
+            content_tag(options[:header_tag] || :h2, header_message) <<
+							# content_tag(:p, 'There were problems with the following fields:') <<
+							content_tag(:p, :active_record_helper_error_description.l('There were problems with the following fields:')) <<
+              content_tag(:ul, error_messages),
+            html
+          )
+        else
+          ''
+        end
+      end
+		end #module ActiveRecordHelper
+
+	end #module Helpers
 end #module ActionView
